--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "ticket-reserve",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "prettier": {
+    "tabWidth": 4,
+    "trailingComma": "none"
+  },
   "dependencies": {
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
@@ -10,6 +14,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
