--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-mock-store": "^1.5.4",
     "redux-saga": "^1.3.0",
     "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
@@ -56,6 +57,7 @@
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/redux-mock-store": "^1.0.6",
     "typescript": "^4.9.5"
   }
 }
