--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,8 +2,11 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "test-utils": ["./utils/test-utils"]
+      "test-utils": [
+        "./utils/test-utils"
+      ]
     },
-    "jsx": "react"
+    "jsx": "react",
+    "esModuleInterop": true
   }
 }
